# wxo-beeai-surya

./: .gitignore  README.md  Screen Recording 2026-02-12 at 1.09.30 AM.mov  docker-compose.yml  maintenance_flow.py  maintenance_scheduler_agent.yaml  predict_maintenance_tool.py  test_beeai_request.py
agents_observability/: langfuse_config.yml
beeai_agent/: Dockerfile  __main__.py  pyproject.toml  tools_dummy.py
beeai_host/: Dockerfile  __main__.py  pyproject.toml
beeai_service/: .dockerignore  .env  Dockerfile  __init__.py  __main__.py  deploy_to_code_engine.sh  docker-compose.yml  env.example  pyproject.toml  setup.sh  setup_local.sh
beeai_service/config/: __init__.py  settings.py
beeai_service/core/: agent.py  tools.py
beeai_service/servers/: __init__.py  a2a_server.py  wxo_server.py
scripts/: import_all.sh
wxo_agents/: maintenance_agent.yaml  maintenance_scheduler_agent.yaml
wxo_flows/: predictive_maintenance_flow.py
wxo_tools/: book_slot_tool.py  maintenance_cost_tool.py  order_parts_tool.py  predict_failure.py  requirements.txt  send_notification_tool.py
